[package]
name = "cheesecake"
version = "0.1.0"
authors = ["aravk <aravkasi@gmail.com>"]
edition = "2018"

[dependencies]
discord-markdown = "0.1.2"
dotenv = "0.15"
glob = "0.3"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4.19"
rusqlite = { version = "0.25", features = ["bundled", "chrono"] }
tempfile = "3.2.0"
fernet = "0.1.4"
openssl = { version = "0.10.35", features = ["vendored"] }
base64 = "0.13.0"
nom = { version = "6.2.1", features = ["regexp"] }
lazy_static = "1.4.0"
html-escape = "0.2.9"
rust-embed = { version = "6.0.0", features = ["interpolate-folder-path"] }
directories = "4.0"

[features]
embed-compression = ["rust-embed/compression"]
